--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,9 @@
 
 <head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.17.0/axios.js"></script>
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJVInBZD7EIowq2GgOyyvaLNnL-lyneIo&libraries=places"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div id="app">
